# CobotLLMControl

./: README.md
install/: local_setup.sh  setup.sh
install/addverb_cobot_control/share/addverb_cobot_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/addverb_cobot_controllers/lib/addverb_cobot_controllers/: gripper_action_bridge
install/addverb_cobot_controllers/share/addverb_cobot_controllers/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/addverb_cobot_description/share/addverb_cobot_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/addverb_cobot_hardware/share/addverb_cobot_hardware/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/addverb_cobot_msgs/share/addverb_cobot_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/addverbmove/lib/addverbmove/: movecobot  movecobotanywhere
install/addverbmove/share/addverbmove/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/examples/lib/examples/: demo_cartesian_impedance  demo_cartesian_jogging  demo_effort  demo_gravity_comp_effort  demo_gripper  demo_joint_impedance  demo_joint_jogging  demo_ptp_joint  demo_ptp_tcp  demo_recorder  demo_velocity
install/examples/share/examples/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/haptic/lib/haptic/: haptic_integration
install/haptic/share/haptic/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/linkattacher_msgs/share/linkattacher_msgs/: local_setup.sh  package.sh
install/moveit_pytest/lib/moveit_pytest/: cobotcheckpoint  cobotdetection  cobotdetection2  cobotdetection3  cobotkeyboard  cobotrotate  grippercontrol  movecoord  moveit_test  plan_and_execute  viewer
install/moveit_pytest/share/moveit_pytest/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_linkattacher/share/ros2_linkattacher/: package.sh
install/syncro_5_moveit_config/share/syncro_5_moveit_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/syncro_gripper_moveit_config/share/syncro_gripper_moveit_config/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build
src/: change.txt
src/cobot_ros2/: README.md
src/cobot_ros2/cobot_ros2/: requirements.txt
src/cobot_ros2/cobot_ros2/addverbmove/: CMakeLists.txt
src/cobot_ros2/cobot_ros2/addverbmove/launch/: move.launch.py
src/cobot_ros2/cobot_ros2/addverbmove/src/: movecobot.cpp  movecobotanywhere.cpp
src/cobot_ros2/cobotprocessing/: preprocessor.py  system_prompt.txt
(+228 files in other folders)
