<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>haptic</name>
  <version>0.0.0</version>
  <description>Haptic demo for Cartesian jogging and gripper control</description>

  <maintainer email="harsh.wadibhasme@addverb.com">harshwadibhasme</maintainer>
  <license>MIT</license>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Custom message/service dependencies -->
  <depend>haptic_pkg</depend>
  <depend>addverb_cobot_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
